--- a/Clickable-CV-Template/document.tex
+++ b/Clickable-CV-Template/document.tex
@@ -8,10 +8,10 @@
 
 %---------------------------------PREAMBLE--------------------------------------
 \documentclass[legalpaper,11pt]{article}
-\usepackage[top=10mm, bottom=15mm,left=10mm,right=10mm]{geometry} % To change page marigin sizes
+\usepackage[top=10mm, bottom=15mm,left=5mm,right=5mm]{geometry} % To change page marigin sizes
 \usepackage[colorlinks=true,breaklinks]{hyperref}
 \usepackage{xcolor}
-\definecolor{c1}{rgb}{0,0,1}
+\definecolor{c1}{rgb}{0,0,0}
 \hypersetup{urlcolor={c1}}
 \parindent=0mm %disble default paragraph indentation
 
@@ -21,10 +21,16 @@
 \begin{document}
 
 \begin{center}
-	{\Huge Bimalka Piyaruwan Thalagala}\\
-	\href{https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=bimalkapiyaruwan1998322@gmail.com}{bimalkapiyaruwan1998322@gmail.com} %Hyper Reference
-	. \href{https://wa.me/94750296594/}{+94 75 029 6594} % Mobile Number connected with WhatsApp
-	. \url{https://bimalka98.github.io/}
+	{\Huge \sc Bimalka Piyaruwan Thalagala}\\
+	{\small
+	\href{mailto:bimalkapiyaruwan1998322@gmail.com}{bimalkapiyaruwan1998322@gmail.com} %Hyper Reference
+	 $\cdot$ +94 75 029 6594 % Mobile Number connected with WhatsApp
+	 $\cdot$ \href{https://www.linkedin.com/in/bimalka-piyaruwan/}{linkedin.com/in/bimalka-piyaruwan/}
+	 $\cdot$ \href{https://github.com/bimalka98}{github.com/bimalka98}\\
+	326/2,
+	Kandahena,
+	Dedigamuwa, Colombo, 10656,
+	Sri Lanka}
 \end{center}
 \vspace{5mm}
 
@@ -36,29 +42,29 @@
 \setlength{\leftskip}{5mm}
 %------------------------------CONTENTS--------------------------------
 
-\textbf{\large University of Moratuwa, Sri Lanka}\hspace{2cm} \textbf{\large Cumulative GPA :3.44} \hfill \textbf{\large Dec 2018-Present}\\
-B.Sc. Engineering (Electronic and Telecommunication)\\
+\textbf{\large University of Moratuwa, Sri Lanka}\hspace{6mm} \textbf{\large Cumulative GPA: 3.5/4.2} \hfill \textbf{\large Dec 2018 - Present}\\
+B.Sc. in Engineering (Electronic and Telecommunication)\\
 
 \textbf{\large Royal College, Colombo, Sri Lanka} \hfill \textbf{\large Grad: Dec 2017}\\
 GCE Advanced Level (Mathematics, Physics, Chemistry)\hfill 3As / 421st in country / z-score of 2.0188\\
-(country-wide university entrance examination taken by 270,000 students annually)\\
+(Country-wide university entrance examination taken by 270,000 students annually)\\
 
-\textbf{\large Dharmapla Maha Vidyalaya, Kottawa, Sri Lanka} \hfill \textbf{\large Jan2004-Dec 2014}\\
-GCE Ordinary Level (passed with 9As (country-wide high school entrance examination))\\
+\textbf{\large Dharmapala College, Kottawa, Sri Lanka} \hfill \textbf{\large Jan 2004 - Dec 2014}\\
+GCE Ordinary Level (Passed with 9As (Country-wide high school entrance examination))\\
 
 \textbf{\large Other Courses}\\
-Differential Equations for Engineers  \hfill(Certifcate earned -July 27, 2020- \href{https://coursera.org/share/5a90715745c310c0df94b0a38195d912}{Verify})\\
-\hspace{5mm}On Coursera- Offered by The Hong Kong University of Science and Technology\\
-
+%Differential Equations for Engineers  \hfill(Certifcate earned -July 27, 2020- \href{https://coursera.org/share/5a90715745c310c0df94b0a38195d912}{Verify})\\
+%\hspace{5mm}On Coursera- Offered by The Hong Kong University of Science and Technology\\
 Hardware Description Languages for FPGA Design \hfill (Certifcate earned -July 22, 2020- \href{https://coursera.org/share/92d9165909e39bee309b138a8faa42d1}{Verify})\\
 \hspace{5mm}On Coursera- Offered by University of Colorado Boulder\\
 
 Introduction to Git and GitHub  \hfill (Certifcate earned -June 09, 2020- \href{https://coursera.org/share/11e7ef2a9ae7b3358177c9bb7ad81574}{Verify})\\
 \hspace{5mm}On Coursera- Offered by Google
 
+
 %-----------------------------------------------------------------------
 \setlength{\leftskip}{0pt}
-\vspace{2cm}
+\vspace{1.5cm}
 
 
 %==============================SECTION 2========================================
@@ -69,18 +75,42 @@ Introduction to Git and GitHub  \hfill (Certifcate earned -June 09, 2020- \href{
 \setlength{\leftskip}{5mm}
 %------------------------------CONTENTS--------------------------------
 
-\textbf{\large Programming Languages}: Python, MATLAB, C, C++ (novice)\\
+\textbf{\large Programming Languages}: Familiarity with Python, MATLAB, C, C++ \\
 
-\textbf{\large Software Tools}: Altium Designer-2017, SolidWorks-2016, MS Office Package-2016, Adobe Photoshop CC-2019\\
+\textbf{\large Software Tools}: Altium Designer 2020, SolidWorks 2016, NI Multisim 14.0, Tina-TI 9.0, \LaTeX , Adobe Photoshop CC 2019, MS Office Package 2016\\
 
-\textbf{\large Additional spoken Languages}: International English
+\textbf{\large Spoken Languages}: International English, Sinhala(native)
 
 %-----------------------------------------------------------------------
 \setlength{\leftskip}{0pt}
-\vspace{2cm}
+\vspace{1.5cm}
+
 
 
 %==============================SECTION 3========================================
+
+\textbf{\Large A}WARDS
+
+\vspace{2mm}\hrule\vspace{5mm}
+\setlength{\leftskip}{5mm}
+%------------------------------CONTENTS--------------------------------
+
+
+\textbf{Sporting Colors} -Taekwondo \hfill\textbf{2019}\\
+University of Moratuwa, Sri Lanka\\
+
+\textbf{EXED Royal Award} \hfill\textbf{2018}\\
+Recognition of the excellence in Advanced Level Examination in 2017 by Royal College, Sri Lanka\\
+
+
+%-----------------------------------------------------------------------
+\setlength{\leftskip}{0pt}
+\vspace{1.5cm}
+
+
+
+
+%==============================SECTION 4========================================
 
 \textbf{\Large V}OLUNTEER EXPERIENCE / \textbf{\Large L}EADERSHIP
 
@@ -88,17 +118,20 @@ Introduction to Git and GitHub  \hfill (Certifcate earned -June 09, 2020- \href{
 \setlength{\leftskip}{5mm}
 %------------------------------CONTENTS--------------------------------
 
-\textbf{Sergeant at Arms} - Rotaract Club of University of Moratuwa \hfill\textbf{Rotaract year 2019/2020}\\
+\textbf{Student Representative}  \hfill\textbf{Nov 2020 - Present}\\
+Hold responsibilities related to academic and non-academic activities of the students from the 2018 batch of the Department of Electronic and Telecommunication Engineering in University of Moratuwa, Sri Lanka\\
+
+\textbf{Sergeant at Arms} - Rotaract Club of University of Moratuwa, Sri Lanka \hfill\textbf{2019/2020}\\
 
 \textbf{Assistant event coordinator} - ``Are You Ready? 2019'' \hfill\textbf{2019}\\
-Official carrier fair of University of Moratuwa (2019) organized by the Rotaract club of University of Moratuwa.\\
+Official carrier fair of University of Moratuwa (2019) organized by the Rotaract club of University of Moratuwa, Sri Lanka\\
 
 \textbf{Co-chairperson} - ``Campfire'' \hfill\textbf{2019}\\
-The signature project under the avenue of Club Services which was organized by Rotaract Club of University of Moratuwa.
+The signature project under the avenue of Club Services which was organized by Rotaract Club of University of Moratuwa, Sri Lanka
 
 %-----------------------------------------------------------------------
 \setlength{\leftskip}{0pt}
-\vspace{2cm}
+\vspace{1.5cm}
 
-%------------------------------END OF DOCUMENT----------------------------------
+%----------------------------END OF DOCUMENT-------------------------------
 \end{document}
